crates/slopty-proto/tests/snapshots/golden_drag__dnd__dnd_caught.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
63 00 00 00 05 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 d7 a6 01 1b 2f 55 73 65 72 73 2f 63
2f 44 65 73 6b 74 6f 70 2f 72 65 70 6f 72 74 2e
70 64 66 02 01 16 70 75 62 6c 69 63 2e 75 74 66
38 2d 70 6c 61 69 6e 2d 74 65 78 74 01 03 66 6f
78 03 01 0d 63 6f 6d 2e 61 64 6f 62 65 2e 70 64
66 00 80 80 80 20 01
