crates/slopty-proto/tests/snapshots/golden_drag__dnd__dnd_data.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
24 00 00 00 01 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 d7 a6 01 0a 70 75 62 6c 69 63 2e 70
6e 67 01 04 89 50 4e 47
