crates/slopty-proto/tests/snapshots/golden_drag__dnd__dnd_ended.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
13 00 00 00 03 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 d7 a6 01
