crates/slopty-proto/tests/snapshots/golden_drag__dnd__dnd_operation.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
13 00 00 00 02 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 d7 a6 02
