crates/slopty-proto/tests/snapshots/golden_drag__dnd__dnd_promised.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
3d 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 d7 a6 01 28 2f 55 73 65 72 73 2f 63
2f 2e 73 6c 6f 70 74 79 2f 64 72 61 67 2f 64 37
61 36 2f 49 4d 47 5f 30 30 34 32 2e 6a 70 65 67
00
