crates/slopty-proto/tests/snapshots/golden_drag__dnd__dnd_source_at.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
8d 00 00 00 00 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 d7 a6 00 00 00 00 00 64 89 40 00 00
00 00 00 a0 79 40 02 01 24 2f 55 73 65 72 73 2f
63 2f 2e 73 6c 6f 70 74 79 2f 64 72 6f 70 2f 64
37 61 36 2f 6e 6f 74 65 73 2e 74 78 74 01 00 00
00 00 02 0a 70 75 62 6c 69 63 2e 70 6e 67 16 70
75 62 6c 69 63 2e 75 74 66 38 2d 70 6c 61 69 6e
2d 74 65 78 74 01 16 70 75 62 6c 69 63 2e 75 74
66 38 2d 70 6c 61 69 6e 2d 74 65 78 74 03 66 6f
78
